--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Universidad Web</title>
 </head>
 <body>
-    <h1>Universidad HTML</h1> 
+    <h1 style="color: blue;">Universidad HTML</h1> 
     <p>Mi primer página HTML</p>
+    <hr>
+    <p>Segundo parrafo</p>
+
+    <a href="https://www.frsr.utn.edu.ar/" target="_blank"
+    >UTN San Rafel</a>
+    <br>
+    <a href="pagina1.html">Ir a página 1</a>
+    <img src="imagenes/banana.png" alt="Banana" width="300px" title="Logo banana" />
+    <p>
+        <pre>   Este es 
+                  Nuestro 
+                      nuevo 
+                         parrafo
+        </pre>
+    </p>
+
 </body>
 </html>
